<resources>
    <string name="app_name">CovidPasScanner</string>

    <!-- Generiche -->
    <string name="vuoto"></string>
    <string name="strint">%1$d</string>
    <string name="strstr">%1$s</string>
    <string name="str2str">%1$s:%2$s</string>
    <string name="strf21">%1$2.1f</string>
    <string name="strf41">%1$4.1f</string>
    <string name="strf42">%1$4.2f</string>
    <string name="strf55">%1$5.5f</string>
    <string name="strf61">%1$6.1f</string>
    <string name="strf62">%1$6.2f</string>
    <string name="strf1010">%1$10.10f</string>
    <string name="strc3">%1$d%2$d%3$d</string>
    <string name="strc5">%1$d%2$d%3$d%4$d%5$d</string>
    <string name="strdata">%1$02d/%2$02d/%3$02d</string>
    <string name="strora">%1$02d:%2$02d</string>
    <string name="sqldateformat">yyyy-MM-dd HH:mm:ss</string>
    <string name="userdateformat">dd-MM-yyyy HH:mm:ss</string>
    <string name="invia">Send</string>
    <string name="ok">OK</string>
    <string name="annulla">Cancel</string>
    <string name="esci">Exit</string>
    <string name="nonsalvare">Do not Save</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <!-- ActionBar Menu -->
    <string name="action_appver">Rev. 1.00.00</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_info">Info</string>
    <string name="action_setup">Setup</string>
    <string name="action_mail">Mail</string>

    <!-- Activity Intro -->
    <string name="title_activity_intro">CovidPasScanner</string>

    <!-- Activity First -->
    <string name="version"><u><b>version %1$s</b></u></string>
    <string name="privacyTitle"></string>
    <string name="privacy">CovidPasScanner scans the QRcode on the certification using the device\'s camera. No data read from the Certification is stored on the device being verified.
\n\nIn order to use the app, you must provide consent to use the camera.</string>
    <string name="lastSyncDate">Last data and rules update:\n%1$s</string>
    <string name="notAvailable">N/A</string>
    <string name="label_scan_mode">Verification type</string>
    <string name="label_choose_scan_mode">Choose type of verification</string>
    <string name="label_no_scan_mode_chosen">To scan, select one of the two types of Covid-19 GreenPass Certification verification: BASIC or ENHANCED.
\nBASE typology: the app considers valid the green certifications generated by vaccination, healing, tampon. It is used for access to workplaces, public or private transport, closed ski resorts, accommodation facilities, health facilities, indoor sports and cultural activities, fairs and festivals, etc...
\n REINFORCED Typology: the app considers valid only green certifications generated by vaccination or healing.

It is used to access shows, sporting events, indoor dining, parties and discos, public ceremonies, etc. \n
\nDetailed information on the activities allowed without/with green pass BASIC and ENHANCED (link https://www.governo.it/sites/governo.it/files/documenti/documenti/Notizie-allegati/tabella_attivita_consentite.pdf)\n
\nThe usage detail is in the PCM table at the following link https://www.governo.it/sites/governo.it/files/documenti/documenti/Notizie-allegati/tabella_attivita_consentite.pdf</string>
    <string name="scan_mode_3G_header_type">Basic</string>
    <string name="scan_mode_2G_header_type">Enhanced</string>
    <string name="scan_mode_BOOST_header_type">Booster</string>
    <string name="scan_mode_3G_header">Basic Verification</string>
    <string name="scan_mode_2G_header">Enhanced Verification</string>
    <string name="scan_mode_BOOST_header">Booster Verification</string>
    <string name="scan_mode_3G">Vaccination /Healing / Swab</string>
    <string name="scan_mode_2G">Vaccination / Healing</string>
    <string name="scan_mode_BOOST">Booster / full cycle+swab / healing+swab</string>
    <string name="loading">Last updated data and rules:\nUpdate in progress...</string>
    <string name="incompleteDownload">The update to the list of revoked COVID-19 GreenPass Certifications is incomplete. Please make sure you are connected to the Internet and click to continue.</string>
    <string name="updatingRevokedPass">The list of revoked COVID-19 GreenPass Certifications is currently being updated.</string>
    <string name="titleDownloadAlert">Update list of Certifications revoked by %1$.2fMb.</string>
    <string name="label_download_alert_complete">It is necessary to update the list of revoked COVID-19 GreenPass Certifications for a total of %1$.2fMB.</string>
    <string name="label_download_alert_simple">The list of revoked COVID-19 GreenPass Certifications needs to be updated.</string>
    <string name="label_drl_download_in_progress">The update to the list of revoked COVID-19 GreenPass Certifications is incomplete. Please make sure you are connected to the Internet and click to continue.</string>
    <string name="label_alert_dialog_option">%1$s (%2$s)</string>
    <string name="noKeyAlertTitle">Unable to scan</string>
    <string name="noKeyAlertMessage">The application must connect to the network at least once to be used.</string>
    <string name="noKeyAlertMessageForDrl">To use the application, you must update the list of revoked COVID-19 GreenPass Certifications.</string>
    <string name="messageDownloadAlert">You need to update the list of revoked COVID-19 GreenPass Certifications, totaling %1$.2fMB. Please check your data plan or connect to a wi-fi network before proceeding. The update time depends on your connection speed and the type of device you are using.The list will be updated every 24 hours.</string>
    <string name="messageDownloadStarted">The list of revoked COVID-19 GreenPass Certifications is currently being updated. Please wait for the end of the download to proceed with the scans.</string>
    <string name="chunk_count">Package %1$d to %2$d</string>
    <string name="chunk_size">%1$.2f Mb to %2$.2f Mb</string>
    <string name="updateTitle">Upgrade required</string>
    <string name="updateMessage">To continue using the app, download the new version from the store.</string>
    <string name="updateLabel">Update</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_message">No Internet connection. Make sure you are connected to the network and try again.</string>
    <string name="label_download">Download Now</string>
    <string name="exit_download">Exit</string>
    <string name="after_download">After</string>
    <string name="resume_download">Resume</string>
    <string name="label_return_home">Return Home</string>

    <string name="label_start_verify">START VERIFY</string>
    <string name="label_position_temp">PLEASE TAKE YOUR TEMPERATURE\n- COME CLOSER SLOWLY -</string>
    <string name="label_position_greenpass">PLEASE SHOW YOUR GREEN PASS</string>
    <string name="label_position_iddoc">PLEASE SHOW YOUR IDENTIFICATION DOCUMENT</string>

    <string name="label_temp_notvalid">ACCESSO DENIED. Try again in a few minutes</string>
    <string name="label_temp_position_ok">Stay Steady</string>
    <string name="label_temp_position_tooclose">Move away</string>
    <string name="label_temp_position_toofar">Come closer\nslowly</string>

    <string name="label_gp_valid">VALID</string>
    <string name="label_gp_notvalid">NOT VALID</string>
    <string name="label_gp_notyetvalid">NOT YET VALID</string>
    <string name="label_gp_noteudcc">NOT EU DCC</string>
    <string name="label_gp_testneeded">TEST NEEDED</string>


    <string name="label_ud_valid">W E L C O M E</string>
    <string name="label_ud_go">YOU CAN PROCEED\nHAVE A NICE DAY</string>
    <string name="label_ud_notvalid">ACCESS DENIED</string>

    <string name="setup_sequence_title">Sequences setup</string>
    <string name="setup_sequence_temp">Temperature</string>
    <string name="setup_sequence_gp">Green Pass</string>
    <string name="setup_sequence_doc">Document</string>
    <string name="setup_rangetemp_title">Temperature Range setup</string>
    <string name="setup_rangetemp_green">Green</string>
    <string name="setup_rangetemp_orange">Orange</string>

</resources>
