<?xml version="1.0" encoding="utf-8"?><!--
   ~ license-start
   ~
   ~ Copyright (C) 2021 Ministero della Salute and all other contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:keepScreenOn="false"
    android:textAlignment="inherit">

    <ImageView
        android:id="@+id/back_image_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@android:color/holo_blue_dark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back_text_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_return_home"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/back_image_setup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVSequenceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/setup_sequence_title"
        android:textAlignment="center"
        android:textColor="@color/covidpasscanner_green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/SWTemperatura"
        android:layout_width="517dp"
        android:layout_height="48sp"
        android:layout_marginTop="56dp"
        android:text="@string/setup_sequence_temp"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVSequenceTitle" />

    <Switch
        android:id="@+id/SWGreenPass"
        android:layout_width="517dp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:text="@string/setup_sequence_gp"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SWTemperatura" />

    <Switch
        android:id="@+id/SWDocumento"
        android:layout_width="517dp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:text="@string/setup_sequence_doc"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SWGreenPass" />

    <TextView
        android:id="@+id/TVRangeTempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/setup_rangetemp_title"
        android:textAlignment="center"
        android:textColor="@color/covidpasscanner_green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SWDocumento" />

    <TextView
        android:id="@+id/TVRangeGreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/setup_rangetemp_green"
        android:textColor="@color/covidpasscanner_green"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/BRangeGreenP" />

    <Button
        android:id="@+id/BRangeGreenP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="28dp"
        android:text="+"
        app:layout_constraintRight_toRightOf="@id/TVRangeTempTitle"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

    <TextView
        android:id="@+id/TVRangeGreen"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:text="37.5"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

    <Button
        android:id="@+id/BRangeGreenM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:text="-"
        app:layout_constraintLeft_toLeftOf="@id/TVRangeTempTitle"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

    <TextView
        android:id="@+id/TVRangeOrangeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/setup_rangetemp_orange"
        android:textColor="@color/covidpasscanner_orange"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/BRangeOrangeP" />

    <Button
        android:id="@+id/BRangeOrangeP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="144dp"
        android:text="+"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintLeft_toLeftOf="@id/TVRangeTempTitle"
        app:layout_constraintRight_toRightOf="@id/TVRangeTempTitle"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

    <TextView
        android:id="@+id/TVRangeOrange"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="144dp"
        android:text="0.5"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

    <Button
        android:id="@+id/BRangeOrangeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="140dp"
        android:text="-"
        app:layout_constraintLeft_toLeftOf="@id/TVRangeTempTitle"
        app:layout_constraintTop_toBottomOf="@id/TVRangeTempTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>