<?xml version="1.0" encoding="utf-8"?><!--
   ~ license-start
   ~
   ~ Copyright (C) 2021 Ministero della Salute and all other contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title"
                    app:layout_constraintTop_toTopOf="@id/logo"
                    tools:text="versione 1.0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/logo"
                    app:layout_constraintStart_toEndOf="@id/logo"
                    app:layout_constraintTop_toTopOf="@id/logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/qrButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/white"
                android:text="QR CODE"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/uartButton"
                android:layout_width="128dp"
                android:layout_height="55dp"
                android:layout_marginBottom="68dp"
                android:drawableTint="@color/white"
                android:text="Test Uart"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/scan_mode_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.091"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uartTest"
                android:layout_width="203dp"
                android:layout_height="24dp"
                android:layout_marginBottom="92dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/scan_mode_button"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="Idle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/scan_mode_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@android:color/transparent"
                android:insetBottom="0dp"
                android:text="@string/label_choose_scan_mode"
                android:textAlignment="textStart"
                android:textSize="15sp"

                app:layout_constraintBottom_toTopOf="@id/qrButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeWidth="1dp" />

            <View
                android:id="@+id/spacing"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/last_update_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clipToPadding="false"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spacing">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/date_last_sync_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Ultimo aggiornamento dati e regole: \nmeno di 4 ore" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/chunk_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/chunk_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_last_sync_text"
                        tools:text="Pacchetto x su n." />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/chunk_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chunk_count"
                        tools:text="xMb su nMb" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/update_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/init_download"
                tools:layout_editor_absoluteX="0dp"
                tools:visibility="visible" />

            <Button
                android:id="@+id/resumeDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/white"
                android:text="@string/resume_download"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintRight_toLeftOf="@id/init_download"
                app:layout_constraintTop_toBottomOf="@id/last_update_card"
                tools:visibility="visible" />

            <Button
                android:id="@+id/init_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/white"
                android:text="@string/label_download"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_update_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frag_anch_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>